Wrote the tests for SwInteractor, with some changes to other entities that were needed.
When Games are being created, Story is not being initialized, so any attempts at adding Word gives NullPointerException.

--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,7 @@ task print() {
 }
 
 test {
-    useJUnitPlatform()
+    useJUnit()
     testLogging {
         events "passed", "skipped", "failed"
     }
