Change the parameter type for storyId and change the print task in build.gradle

--- a/build.gradle
+++ b/build.gradle
@@ -12,7 +12,21 @@ dependencies {
 }
 
 task print() {
-    print("Team TreeDog")
+    print("#############     ########     #######     #######\n" +
+            "      #           #     #      #           #\n" +
+            "      #           #   #        #           #\n" +
+            "      #           # #          #######     #######\n" +
+            "      #           #  #         #           #\n" +
+            "      #           #   #        #           #\n" +
+            "      #           #    #       #######     #######\n")
+    print('\n')
+    print("    ##               #              ##########\n" +
+            "    #  #           #  #            #\n" +
+            "    #    #        #    #           #        ###\n" +
+            "    #     #      #      #          #          ##\n" +
+            "    #    #        #    #           #           ##\n" +
+            "    #  #           #  #              #       ##\n" +
+            "    #               #                  #####\n")
 }
 
 test {
