--- a/springapp/build.gradle
+++ b/springapp/build.gradle
@@ -4,6 +4,10 @@ plugins {
 	id 'io.spring.dependency-management' version '1.1.0'
 }
 
+task print() {
+	print("SPRING GRADLE HAS RUN")
+}
+
 group = 'com.example'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '17'
