--- a/runner/build.gradle
+++ b/runner/build.gradle
@@ -23,3 +23,24 @@ dependencies {
 test {
     useJUnitPlatform()
 }
+
+jar {
+    manifest {
+        attributes 'Main-Class': 'Main'
+    }
+}
+
+task fatJar(type: Jar) {
+    manifest.from jar.manifest
+    classifier = 'all'
+    duplicatesStrategy = 'exclude'
+
+    from {
+        configurations.runtimeClasspath.collect {it.isDirectory() ? it : zipTree(it) }
+    } {
+        exclude "META-INF/*"
+    }
+
+    with jar
+}
+
