--- a/springapp/build.gradle
+++ b/springapp/build.gradle
@@ -21,7 +21,8 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-websocket'
 	implementation project(':')
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
-	runtimeOnly 'org.postgresql:postgresql'
+    implementation 'org.jetbrains:annotations:20.1.0'
+    runtimeOnly 'org.postgresql:postgresql'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
