Set compatibility version

--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,9 @@ dependencies {
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.0'
 }
 
+sourceCompatibility = '17'
+targetCompatibility = '17'
+
 task print() {
     print("#############     ########     #######     #######\n" +
             "      #           #     #      #           #\n" +
