--- a/runner/build.gradle
+++ b/runner/build.gradle
@@ -11,6 +11,9 @@ repositories {
     mavenCentral()
 }
 
+sourceCompatibility = '17'
+targetCompatibility = '17'
+
 dependencies {
     implementation project(':')
     implementation project(':springapp')
