--- a/springapp/build.gradle
+++ b/springapp/build.gradle
@@ -11,6 +11,7 @@ task print() {
 group = 'com.example'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '17'
+targetCompatibility = '17'
 
 repositories {
 	mavenCentral()
