--- a/springapp/build.gradle
+++ b/springapp/build.gradle
@@ -21,6 +21,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-websocket'
 	implementation project(':')
+	implementation project(':terminal_debug')
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
     implementation 'org.jetbrains:annotations:20.1.0'
     runtimeOnly 'org.postgresql:postgresql'
