--- a/springapp/build.gradle
+++ b/springapp/build.gradle
@@ -23,7 +23,8 @@ dependencies {
 	implementation project(':')
 	implementation project(':terminal_debug')
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
-    implementation 'org.jetbrains:annotations:20.1.0'
+    implementation 'org.jetbrains:annotations:23.1.0'
+	implementation 'com.fasterxml.jackson.module:jackson-module-jsonSchema:2.14.0'
     runtimeOnly 'org.postgresql:postgresql'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
