--- a/springapp/build.gradle
+++ b/springapp/build.gradle
@@ -25,7 +25,8 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
     implementation 'org.jetbrains:annotations:23.1.0'
 	implementation 'com.fasterxml.jackson.module:jackson-module-jsonSchema:2.14.0'
-    implementation 'org.postgresql:postgresql'
+	implementation 'org.springframework.boot:spring-boot-starter-jdbc'
+    runtimeOnly 'org.postgresql:postgresql'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
