--- a/springapp/src/main/resources/application.properties
+++ b/springapp/src/main/resources/application.properties
@@ -4,3 +4,10 @@ spring.thymeleaf.cache=false
 #Template Engine
 spring.mvc.view.prefix=classpath:/templates
 spring.mvc.view.suffix=.html
+
+# Postgres
+spring.datasource.url= jdbc:postgresql://${POSTGRES_ADDRESS}:${POSTGRES_PORT}/onewordstory
+spring.datasource.username= ${POSTGRES_USERNAME}
+spring.datasource.password= ${POSTGRES_PASSWORD}
+
+# CURRENTLY ONLY WORKS IF YOU EXPLICITLY WRITE IN THE VALUES INSTEAD OF USING DOTENV
