--- a/runner/build.gradle
+++ b/runner/build.gradle
@@ -20,6 +20,7 @@ dependencies {
     implementation project(':terminal_debug')
     implementation 'org.jetbrains:annotations:23.0.0'
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'io.github.cdimascio:dotenv-java:2.3.1'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
 }
