--- a/.github/workflows/classroom.yml
+++ b/.github/workflows/classroom.yml
@@ -14,3 +14,6 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: education/autograding@v1
+        with:
+          java-version: '17'
+          distribution: 'adopt'
