--- a/.github/workflows/classroom.yml
+++ b/.github/workflows/classroom.yml
@@ -13,7 +13,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: education/autograding@v1
+      - uses: actions/setup-java@v3
         with:
           java-version: '17'
-          distribution: 'adopt'
+      - uses: education/autograding@v1
